# OGREE

./: .gitignore  Makefile  README.md  SPEC.md  WORKPLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: smoke.yml
alembic/: env.py
alembic/versions/: 0001_create_event_log_and_alerts.py
config/: universe.yaml
docs/: DEMO_REPORT_SAMPLE.md  MILESTONES_NEXT_STEPS.md  OGREE_TOOL_SUMMARY.md
ogree_alpha/: __main__.py  alert_generator.py  chain_view.py  cli.py  contracts.py  convergence.py  demo_pipeline.py  email_report.py  entity_resolution.py  hashing.py  observability.py  opportunity_ranker.py  report_twice_daily.py  universe.py
ogree_alpha/adapters/: __init__.py  alaska_permits.py  alaska_wells.py  federal_register_rules.py  nprm_congressional.py  ree_uranium.py  sec_edgar.py  texas_rrc.py
ogree_alpha/db/: models.py  repo.py  session.py
sample_data/: raw_events.jsonl
sample_data/alaska/: permits_sample.json
sample_data/federal_register/: events.jsonl
sample_data/policy_signals/: events.jsonl
sample_data/ree_uranium/: events.jsonl
sample_data/sec_edgar/: form4_events.jsonl
scripts/: smoke.sh
tests/: test_alert_generator.py  test_cli_email_report.py  test_cli_run_all.py  test_convergence.py  test_db_smoke.py  test_email_report.py  test_entity_resolution.py  test_federal_register_rules.py  test_models_compile.py  test_nprm_congressional.py  test_observability.py  test_phase3_demo_pipeline.py  test_ree_uranium.py  test_report_twice_daily.py  test_sec_edgar.py  test_texas_rrc_fixture_ingest.py  test_texas_rrc_payload_shape.py
(+1 files in other folders)
