[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogree-alpha"
version = "0.1.0"
description = "OGREE Exploration Alpha (Track A) research engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "typer>=0.12",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ogree_alpha*"]
